Implementata issue #25
